--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -28,9 +28,9 @@ permissions:
 
 jobs: 
   check-reviews:
+    if: !github.event.pull_request.draft
     name: Checking reviewers 
     runs-on: ubuntu-latest
-    if: github.event.pull_request.draft == false
     steps:
       # Checkout master branch of Teleport repository. This is to prevent an
       # attacker from submitting their own review assignment logic. 
