--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,11 +1,3 @@
-# Default owners for items not matched below.
-* @klizhentas @russjones @r0mant
-
-# Documentation.
-/docs/ @klizhentas @russjones
-/docs/pages/application-access/ @klizhentas @r0mant @russjones
-/docs/pages/database-access/ @klizhentas @r0mant @russjones
-
-# Frontend Engineering.
-/lib/web/ @alex-kovoy @russjones @r0mant
-/webassets/ @alex-kovoy @russjones @r0mant
+# Merge rules are governed by logic in the Workflow Bot. Protect the
+# .github/workflows directory (and the merge logic) using CODEOWNERS.
+/.github/workflows/ @klizhentas @russjones @r0mant @zmb3
