Edit Proxy Peering documentation (#55879)
Closes #32908

- Mention a requirement for the Proxy Service to be available over a
  single address to clients, and the use of split DNS to provide this
  capability.

- Move the Proxy Peering architecture guide into a "How it works"
  section of the how-to guide. Since the architecture guide is short,
  this approach allows us to include all context in a single location.

--- a/docs/config.json
+++ b/docs/config.json
@@ -738,6 +738,11 @@
       "source": "/admin-guides/deploy-a-cluster/linux-demo/",
       "destination": "/linux-demo/",
       "permanent": true
+    },
+    {
+      "source": "/reference/architecture/proxy-peering/",
+      "destination": "/admin-guides/management/operations/proxy-peering/",
+      "permanent": true
     }
   ]
 }
