--- a/web/packages/teleterm/package.json
+++ b/web/packages/teleterm/package.json
@@ -46,6 +46,7 @@
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
     "electron": "36.3.2",
+    "electron-updater": "^6.6.5",
     "electron-builder": "^26.0.12",
     "electron-vite": "^3.1.0",
     "events": "3.3.0",
