--- a/web/packages/teleterm/dev-app-update.yml
+++ b/web/packages/teleterm/dev-app-update.yml
@@ -1,1 +1,3 @@
 provider: custom
+# Downloads updates to <system cache dir>/teleport-connect-dev-updater directory.
+updaterCacheDirName: teleport-connect-dev-updater
