--- a/.golangci.yml
+++ b/.golangci.yml
@@ -117,6 +117,8 @@ linters:
               desc: testing packages should not be imported outside of _test.go files
             - pkg: github.com/gravitational/teleport/lib/utils/mcptest
               desc: testing packages should not be imported outside of _test.go files
+            - pkg: github.com/gravitational/teleport/lib/auth/keystoretest
+              desc: testing packages should not be imported outside of _test.go files
         logging:
           deny:
             - pkg: github.com/sirupsen/logrus
@@ -206,6 +208,7 @@ linters:
             - '!**/e/tests/**'
             - '!**/lib/auth/helpers.go'
             - '!**/lib/auth/keystore/testhelpers.go'
+            - '!**/lib/auth/keystore/keystoretest/**'
             - '!**/lib/backend/test/**'
             - '!**/lib/events/athena/test.go'
             - '!**/lib/events/test/**'
@@ -261,6 +264,7 @@ linters:
             - '!**/integrations/operator/controllers/resources/testlib/**'
             - '!**/lib/auth/helpers.go'
             - '!**/lib/auth/keystore/testhelpers.go'
+            - '!**/lib/auth/keystore/keystoretest/**'
             - '!**/lib/backend/test/**'
             - '!**/lib/cryptosuites/precompute.go'
             - '!**/lib/cryptosuites/internal/rsa/rsa.go'
