--- a/integrations/terraform-mwi/Makefile
+++ b/integrations/terraform-mwi/Makefile
@@ -2,6 +2,7 @@ VERSION ?= $(shell go run ../hack/get-version/get-version.go)
 
 OS ?= $(shell go env GOOS)
 ARCH ?= $(shell go env GOARCH)
+TERRAFORM_ARCH=$(OS)_$(ARCH)
 RELEASE = terraform-provider-teleportmwi-v$(VERSION)-$(OS)-$(ARCH)-bin
 
 BUILDDIR ?= build
@@ -65,3 +66,14 @@ testacc:
 .PHONY: lint
 lint:
 	golangci-lint run -c ../../.golangci.yml
+
+.PHONY: docs
+docs: install
+	./gen/docs.sh $(VERSION)
+
+PROVIDER_PATH = ~/.terraform.d/plugins/terraform.releases.teleport.dev/gravitational/teleport-mwi/$(VERSION)/$(TERRAFORM_ARCH)/
+
+.PHONY: install
+install: build
+	mkdir -p $(PROVIDER_PATH)
+	mv $(BUILDDIR)/terraform-provider-teleport-mwi $(PROVIDER_PATH)
