--- a/.golangci.yml
+++ b/.golangci.yml
@@ -157,6 +157,7 @@ linters:
             - '!**/lib/auth/test/**'
             - '!**/lib/backend/test/**'
             - '!**/lib/events/test/**'
+            - '!**/lib/kube/proxy/utils_testing.go'
             - '!**/lib/services/suite/**'
             - '!**/lib/srv/mock.go'
             - '!**/lib/srv/db/redis/test.go'
@@ -221,6 +222,7 @@ linters:
             - '!**/lib/cryptosuites/internal/rsa/rsa.go'
             - '!**/lib/events/test/**'
             - '!**/lib/fixtures/**'
+            - '!**/lib/kube/proxy/utils_testing.go'
             - '!**/lib/modules/test.go'
             - '!**/lib/service/service.go'
             - '!**/lib/services/local/users.go'
