--- a/tool/fdpass-teleport/Cargo.toml
+++ b/tool/fdpass-teleport/Cargo.toml
@@ -3,6 +3,9 @@ name = "fdpass-teleport"
 version = "0.1.0"
 edition = "2021"
 
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
+
 [workspace]
 
 [dependencies]
