Introduce modulestest package (#56721)
The new package is meant to house a test friendly implementation
of modules.Modules. Due to the pervasive and global nature of
modules, this package also contains a copy of of
modules.SetTestModules. In a perfect world this function wouldn't
be needed and modules would be injected where required, however,
that would take considerable effort. The existing test modules
are temporarily left in place until the enterprise tests can be
updated to use modulestest.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -223,6 +223,7 @@ linters:
             - '!**/lib/events/test/**'
             - '!**/lib/fixtures/**'
             - '!**/lib/kube/proxy/utils_testing.go'
+            - '!**/lib/modules/modulestest/**'
             - '!**/lib/modules/test.go'
             - '!**/lib/service/service.go'
             - '!**/lib/services/local/users.go'
