--- a/.golangci.yml
+++ b/.golangci.yml
@@ -168,6 +168,7 @@ linters:
         test_packages:
           files:
             - '!$test'
+            - '!**/integrations/operator/controllers/resources/testlib/**.go'
           deny:
             - pkg: github.com/gravitational/teleport/e/lib/aws/identitycenter/test
               desc: testing packages should not be imported outside of _test.go files
@@ -188,6 +189,8 @@ linters:
             - pkg: github.com/gravitational/teleport/lib/srv/db/redis/testing
               desc: testing packages should not be imported outside of _test.go files
             - pkg: github.com/gravitational/teleport/lib/srv/db/spanner/testing
+              desc: testing packages should not be imported outside of _test.go files
+            - pkg: github.com/gravitational/teleport/lib/modules/modulestest
               desc: testing packages should not be imported outside of _test.go files
         testify:
           files:
@@ -256,6 +259,7 @@ linters:
             - '!**/lib/cryptosuites/precompute.go'
             - '!**/lib/cryptosuites/internal/rsa/rsa.go'
             - '!**/lib/events/test/**'
+            - '!**/lib/modules/modulestest/**'
             - '!**/lib/modules/test.go'
             - '!**/lib/service/service.go'
             - '!**/lib/services/local/users.go'
