--- a/examples/chart/teleport-cluster/charts/teleport-operator/operator-crds/resources.teleport.dev_rolesv6.yaml
+++ b/examples/chart/teleport-cluster/charts/teleport-operator/operator-crds/resources.teleport.dev_rolesv6.yaml
@@ -370,6 +370,26 @@ spec:
                               type: string
                           type: object
                         type: array
+                      claims_to_search_as_roles:
+                        description: ClaimsToSearchAsRoles specifies a mapping from
+                          claims (traits) to teleport roles.
+                        items:
+                          properties:
+                            claim:
+                              description: Claim is a claim name.
+                              type: string
+                            roles:
+                              description: Roles is a list of static teleport roles
+                                to match.
+                              items:
+                                type: string
+                              nullable: true
+                              type: array
+                            value:
+                              description: Value is a claim value to match.
+                              type: string
+                          type: object
+                        type: array
                       kubernetes_resources:
                         description: 'kubernetes_resources can optionally enforce
                           a requester to request only certain kinds of kube resources.
@@ -964,6 +984,26 @@ spec:
                       claims_to_roles:
                         description: ClaimsToRoles specifies a mapping from claims
                           (traits) to teleport roles.
+                        items:
+                          properties:
+                            claim:
+                              description: Claim is a claim name.
+                              type: string
+                            roles:
+                              description: Roles is a list of static teleport roles
+                                to match.
+                              items:
+                                type: string
+                              nullable: true
+                              type: array
+                            value:
+                              description: Value is a claim value to match.
+                              type: string
+                          type: object
+                        type: array
+                      claims_to_search_as_roles:
+                        description: ClaimsToSearchAsRoles specifies a mapping from
+                          claims (traits) to teleport roles.
                         items:
                           properties:
                             claim:
