--- a/.golangci.yml
+++ b/.golangci.yml
@@ -169,6 +169,11 @@ linters:
           files:
             - '!$test'
             - '!**/integrations/operator/controllers/resources/testlib/**.go'
+            - '!**/e/lib/aws/identitycenter/test/**'
+            - '!**/e/lib/devicetrust/testenv/**'
+            - '!**/e/lib/jamf/testenv/**'
+            - '!**/e/lib/operatortest/**'
+            - '!**/e/tests/**'
           deny:
             - pkg: github.com/gravitational/teleport/e/lib/aws/identitycenter/test
               desc: testing packages should not be imported outside of _test.go files
