Complete logtest migration
Updates e to include https://github.com/gravitational/teleport.e/pull/6906
so that utils.InitLoggerForTests and utils.NewSlogLoggerForTests
can be removed.

Updates https://github.com/gravitational/teleport/issues/51023.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -203,6 +203,8 @@ linters:
               desc: testing packages should not be imported outside of _test.go files
             - pkg: github.com/gravitational/teleport/lib/modules/modulestest
               desc: testing packages should not be imported outside of _test.go files
+            - pkg: github.com/gravitational/teleport/lib/utils/logtesttest
+              desc: testing packages should not be imported outside of _test.go files
         testify:
           files:
             - '!$test'
