--- a/examples/chart/access/jira/Chart.yaml
+++ b/examples/chart/access/jira/Chart.yaml
@@ -1,4 +1,4 @@
-.version: &version "18.0.0-dev.joerger.2"
+.version: &version "18.0.0-dev.joerger.2-relay.2"
 
 apiVersion: v2
 name: teleport-plugin-jira
