--- a/package.json
+++ b/package.json
@@ -32,14 +32,8 @@
   "devDependencies": {
     "@gravitational/build": "workspace:*",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-    "@storybook/addon-actions": "^8.6.12",
-    "@storybook/addon-controls": "^8.6.12",
-    "@storybook/addon-toolbars": "^8.6.12",
-    "@storybook/components": "^8.6.12",
-    "@storybook/preview-api": "^8.6.12",
-    "@storybook/react": "^8.6.12",
-    "@storybook/react-vite": "^8.6.12",
-    "@storybook/test-runner": "^0.22.1",
+    "@storybook/react-vite": "^9.0.17",
+    "@storybook/addon-vitest": "^9.0.15",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -62,10 +56,11 @@
     "playwright": "^1.53.2",
     "prettier": "^3.6.2",
     "react-select-event": "^5.5.1",
-    "storybook": "^8.6.12",
+    "storybook": "^9.0.17",
     "svgo": "^4.0.0",
     "typescript": "^5.8.3",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "eslint-plugin-storybook": "9.0.17"
   },
   "dependencies": {
     "@codemirror/autocomplete": "^6.18.6",
