--- a/package.json
+++ b/package.json
@@ -37,14 +37,8 @@
   "devDependencies": {
     "@gravitational/build": "workspace:*",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-    "@storybook/addon-actions": "^8.6.12",
-    "@storybook/addon-controls": "^8.6.12",
-    "@storybook/addon-toolbars": "^8.6.12",
-    "@storybook/components": "^8.6.12",
-    "@storybook/preview-api": "^8.6.12",
-    "@storybook/react": "^8.6.12",
-    "@storybook/react-vite": "^8.6.12",
-    "@storybook/test-runner": "^0.22.0",
+    "@storybook/react-vite": "^9.0.17",
+    "@storybook/addon-vitest": "^9.0.15",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -62,12 +56,12 @@
     "jest": "^29.7.0",
     "jsdom-testing-mocks": "^1.13.1",
     "msw": "^2.7.6",
-    "msw-storybook-addon": "^2.0.4",
+    "msw-storybook-addon": "^2.0.5",
     "node-gyp": "^11.2.0",
     "playwright": "^1.52.0",
     "prettier": "^3.5.3",
     "react-select-event": "^5.5.1",
-    "storybook": "^8.6.12",
+    "storybook": "^9.0.17",
     "svgo": "^4.0.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.5"
