--- a/examples/chart/teleport-kube-agent/.lint/extra-labels.yaml
+++ b/examples/chart/teleport-kube-agent/.lint/extra-labels.yaml
@@ -14,6 +14,12 @@ extraLabels:
   clusterRoleBinding:
     app.kubernetes.io/name: "teleport-kube-agent"
     resource: "clusterrolebinding"
+  adminClusterRole:
+    app.kubernetes.io/name: "teleport-kube-agent"
+    resource: "clusterrole"
+  adminClusterRoleBinding:
+    app.kubernetes.io/name: "teleport-kube-agent"
+    resource: "clusterrolebinding"
   config:
     app.kubernetes.io/name: "teleport-kube-agent"
     resource: "config"
