--- a/examples/chart/teleport-cluster/charts/teleport-operator/operator-crds/resources.teleport.dev_databasesv3.yaml
+++ b/examples/chart/teleport-cluster/charts/teleport-operator/operator-crds/resources.teleport.dev_databasesv3.yaml
@@ -327,7 +327,7 @@ spec:
                   instance_id:
                     description: InstanceID is the Cloud SQL instance ID.
                     type: string
-                  is_alloy_db:
+                  is_alloydb:
                     description: IsAlloyDB is true if the database is an AlloyDB server.
                     type: boolean
                   project_id:
