Fix tests where tool name for Windows have extension

--- a/.github/workflows/integration-tests-win.yaml
+++ b/.github/workflows/integration-tests-win.yaml
@@ -62,5 +62,5 @@ jobs:
         shell: bash
         run: |
           export OS="windows"
-          go test -timeout 30m -json ./integration/autoupdate/tools/...
+          go test -timeout 30m ./integration/autoupdate/tools/... -v
 
