Add test pod readiness probe

--- a/fixtures/alpine/Dockerfile
+++ b/fixtures/alpine/Dockerfile
@@ -2,7 +2,7 @@ FROM scratch
 
 ARG ALPINE_VERSION
 
-ADD alpine-minirootfs-$ALPINE_VERSION-x86_64.tar.gz /
+ADD alpine-minirootfs-$ALPINE_VERSION-aarch64.tar.gz /
 
 COPY webserver /webserver
 
