Cleanup access request resource test for role v8 request v7.

--- a/lib/services/suite/testdata/roles/v7_kube_accessrequest_validate.yaml
+++ b/lib/services/suite/testdata/roles/v7_kube_accessrequest_validate.yaml
@@ -144,7 +144,7 @@ spec:
   allow:
     request:
       search_as_roles:
-      - v7-kube-access-namespace
+      - v7-kube-access-wildcard
       kubernetes_resources:
       - kind: 'secret'
   deny: {}
