--- a/web/packages/shared/libs/ironrdp/Cargo.toml
+++ b/web/packages/shared/libs/ironrdp/Cargo.toml
@@ -5,10 +5,16 @@ edition.workspace = true
 license.workspace = true
 publish.workspace = true
 
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
 crate-type = ["cdylib"]
+
+[lints]
+workspace = true
 
 [dependencies]
 console_error_panic_hook = "0.1.7"
