Move the idps section into Identity Governance
The Teleport SAML IdP is an Identity Governance feature. Make sure that
all Identity Governance features fall within the appropriate section of
the docs.

Add a paragraph to the "Enroll Applications" index page indicating that
you can enroll SAML applications using the Teleport IdP.

--- a/docs/config.json
+++ b/docs/config.json
@@ -1044,6 +1044,36 @@
       "source": "/model-context-preview/",
       "destination": "/connect-your-client/model-context-protocol/",
       "permanent": true
+    },
+    {
+      "source": "/admin-guides/access-controls/idps/",
+      "destination": "/identity-governance/idps/",
+      "permanent": true
+    },
+    {
+      "source": "/admin-guides/access-controls/idps/saml-attribute-mapping/",
+      "destination": "/identity-governance/idps/saml-attribute-mapping/",
+      "permanent": true
+    },
+    {
+      "source": "/admin-guides/access-controls/idps/saml-gcp-workforce-identity-federation/",
+      "destination": "/identity-governance/idps/saml-gcp-workforce-identity-federation/",
+      "permanent": true
+    },
+    {
+      "source": "/admin-guides/access-controls/idps/saml-grafana/",
+      "destination": "/identity-governance/idps/saml-grafana/",
+      "permanent": true
+    },
+    {
+      "source": "/admin-guides/access-controls/idps/saml-guide/",
+      "destination": "/identity-governance/idps/saml-guide/",
+      "permanent": true
+    },
+    {
+      "source": "/admin-guides/access-controls/idps/saml-microsoft-entra-external-id/",
+      "destination": "/identity-governance/idps/saml-microsoft-entra-external-id/",
+      "permanent": true
     }
   ]
 }
