--- a/web/packages/shared/libs/ironrdp/Cargo.toml
+++ b/web/packages/shared/libs/ironrdp/Cargo.toml
@@ -24,5 +24,5 @@ tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["time"] }
 tracing-web = "0.1.2"
 uuid = { version = "1.16.0", features = ["js"] }
-wasm-bindgen = "0.2.95"
+wasm-bindgen.workspace = true
 web-sys = { version = "0.3.76", features = ["ImageData"] }
